examples/errors/layerTemplate/DuplicateTemplateKeycode.bkf
module exporting ()

template foo: a b a -- a appears twice here
